--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -38,7 +38,7 @@ jobs:
         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
     - name: Update kube config
-      run: aws eks update-kubeconfig --name sample-app-backend-api
+      run: aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name "thrivestack-dev-eks-cluster" && kubectl get nodes
     
     - name: Deploy to EKS
       run: |
