--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -39,6 +39,10 @@ jobs:
 
     - name: Update kube config
       run: aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name "thrivestack-dev-eks-cluster" && kubectl get nodes
+
+    - name: Replace ACCOUNT_ID in deployment YAML
+      run: |
+        sed -i 's/\${ACCOUNT_ID}/${{ secrets.ACCOUNT_ID }}/g' deployment.yaml
     
     - name: Deploy to EKS
       run: |
