--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -27,13 +27,6 @@ jobs:
       run: |
         aws sts get-caller-identity
         
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
@@ -51,7 +44,9 @@ jobs:
       run: |
         x=$(aws sts get-caller-identity | jq -r '.Account')
         echo $x
-
+        aws sts get-caller-identity | jq -r '.Account'
+        aws eks update-kubeconfig --region us-east-1 --name "thrivestack-dev-eks-cluster" && kubectl get nodes
+        
     - name: Replace ACCOUNT_ID in deployment YAML
       run: |
         sed -i 's/\${ACCOUNT_ID}/${{ secrets.AWS_ACCOUNT_ID }}/g' deployment.yaml
