--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -45,7 +45,7 @@ jobs:
         x=$(aws sts get-caller-identity | jq -r '.Account')
         echo $x
         aws sts get-caller-identity | jq -r '.Account'
-        aws eks update-kubeconfig --region us-east-1 --name "thrivestack-dev-eks-cluster" && kubectl get nodes
+        aws eks update-kubeconfig --region us-east-1 --name thrivestack-dev-eks-cluster
         
     - name: Replace ACCOUNT_ID in deployment YAML
       run: |
