--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -53,4 +53,5 @@ jobs:
     
     - name: Deploy to EKS
       run: |
+        aws eks update-kubeconfig --region us-east-1 --name thrivestack-dev-eks-cluster
         kubectl apply -f deployment.yaml
